# ai4h_databank

./: .gitignore  LICENSE.md  Procfile  README.md  conftest.py  deploy.sh  deploy_hf.sh  logging.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  deploy_dev.yaml  deploy_prod.yml  deploy_staging.yml  performance.yaml  tests.yaml  unit_tests.yaml
data/: README.md  documents_metadata.csv  example_chunks.csv  fetch_metadata.py  sample_questions.csv  sample_questions_variants.csv
performance/: create_variants.py  test_performance.py
performance/evaluation/: generate_questions.py  recall_at_k.py  relevant_answers.py
performance/evaluation/eval_20230704/: analysis.ipynb  feedback_04072023_dump.csv  fetch_feedback.py  generated_questions_for_retrieval.csv
scripts/: delete_data.py  deploy_hf_space.sh  dump_collections.py  upload_data.py
src/: Questions dataset - Irrelevant.csv  Questions dataset - Relevant.csv  Questions dataset - Trick.csv  annotation_app.py  app.py  app_utils.py  arena_app.py  bm25_params.json  buster_app.py  cfg.py  collect_feedback.py  comparison_app.py  db_utils.py  delete_data.py  documents.db  documents_metadata.csv  download_feedback.py  feedback.py  gradio_app.py  irrelevant_questions.txt  relevant_questions.txt  sample_questions.csv  setup.sh  upload_data.py
src/arena/: arena_app.py  gradio_app.py
src/buster/: buster_app.py  gradio_app.py
src/buster/assets/: index.html
src/chunks/: prepare_chunks.py
src/evaluation/: generate_questions.py  recall_at_k.py  relevant_answers.py
src/feedback/: __init__.py  download_feedback.py
src/finetuning/: annotations_jeremy.csv  create_dataset.py  eval_model.py  finetune.py  test_dataset.jsonl  train_dataset.jsonl
tests/: integration_test.py  test_feedback.py  test_performance.py  test_upload_data.py
(+4 files in other folders)
