[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai4h_databank"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "buster @ git+https://github.com/jerpint/buster@v1.0.16",
    "gradio",
    "pymongo"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-order"
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.metadata]
allow-direct-references = true
