[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai4h_databank"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "buster-doctalk==1.0.19",
  "gradio==3.48.0",
  "pymongo==4.5.0",
  "gunicorn==21.2.0",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-order"
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.metadata]
allow-direct-references = true
