[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai4h_databank"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-order"
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = [
    "--import-mode=importlib",
    "--ignore=performance"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]